<?xml version="1.0" encoding="UTF-8"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                        http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <!-- Inherit from the Spring Boot Starter Parent -->
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.3</version>
  </parent>

  <groupId>com.capit</groupId>
  <artifactId>capit</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>capit</name>
  <packaging>pom</packaging>

  <modules>
    <module>capit-schedule</module>
    <module>capit-interactions</module>
    <module>capit-users</module>
    <module>capit-gateway</module>
    <module>capit-common</module>
  </modules>

  <!-- Common Properties -->
  <properties>
    <java.version>21</java.version>
    <spring-cloud.version>2024.0.1</spring-cloud.version>
  </properties>

  <!-- Distribution Management (inherited by children if not overridden) -->
  <distributionManagement>
    <repository>
      <id>artifactory-releases</id>
      <url>http://192.168.0.52:8081/artifactory/libs-release-local</url>
    </repository>
    <snapshotRepository>
      <id>artifactory-snapshots</id>
      <url>http://192.168.0.52:8081/artifactory/libs-snapshot-local</url>
    </snapshotRepository>
  </distributionManagement>

  <!-- Dependency Management for Spring Cloud and other common BOMs -->
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>5.17.0</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.11.4</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>5.11.4</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <!-- Plugin Management: Configure common plugins -->
  <build>
    <pluginManagement>
      <plugins>
        <!-- Spring Boot Maven Plugin for repackage -->
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>3.4.3</version>
          <executions>
            <execution>
              <goals>
                <goal>repackage</goal>
              </goals>
              <phase>package</phase>
            </execution>
          </executions>
        </plugin>
        <!-- Maven Deploy Plugin configured to skip by default, can be overridden in child modules if needed -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.3</version>
          <configuration>
            <skip>true</skip>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
